# trainer_tg_bot

./: .gitignore  manage.py  pyproject.toml
kostia_telegram_bot/: asgi.py  settings.py  urls.py  wsgi.py
tg_bot/: admin.py  apps.py  buttons.py  dispatcher.py  models.py  views.py
